@@ -616,6 +616,7 @@
 2) init.d: fix vlan enabled check.<br>
 3) init.d: optimize switch reinit procesure.<br>
 4) init.d: more human readable variable name and prevent overwrites in dependen logic.<br>
+5) init.d: touch switch in some cases make depend at switch parth instead of direct mode check.<br>
 <br>
 <br>
 <b>TODO:</b><br>
